modularization of routes and orm sql integrated
routes modularizated and grouped by subsystem (sales, users, products) and sqlalchemy orm used to validate user login

--- a/app_sales/view/register_sale.html
+++ b/app_sales/view/register_sale.html
@@ -35,7 +35,7 @@
         <div class="container form-inline padding">
             <button type="button" class="btn btn-primary" onclick="addNewItemField()">Add Item</button><br><br>
             <button type="button" class="btn btn-danger" onclick="removeLastItemField()">Remove Item</button><br><br>
-            <input type="submit" value="Submit" class="btn btn-success" action="{{ url_for('register_sale') }}">
+            <input type="submit" value="Submit" class="btn btn-success" action="{{ url_for('register_sales.register_sales') }}">
         </div>
     </form>
 
