--- a/app_sales/view/homepage.html
+++ b/app_sales/view/homepage.html
@@ -6,17 +6,17 @@
 </head>
 
 <body>
-    <h1>Welcome, {{ session['username'] }}</h1>
+    <h1>Welcome, {{ session['firstname'] }}</h1>
     
     <!-- Navigation Menu -->
     <ul>
-        <li><a href="{{ url_for('register_sale') }}">Sell</a></li>
-        <li><a href="{{ url_for('view_sales') }}">Sales Dashboard</a></li>
-        <li><a href="{{ url_for('register_product') }}">Register Product</a></li>
-        <li><a href="{{ url_for('register_costumer') }}">Register Costumer</a></li>
+        <li><a href="{{ url_for('register_sales.register_sales') }}">Sell</a></li>
+        <li><a href="{{ url_for('view_sales.view_sales') }}">Sales Dashboard</a></li>
+        <li><a href="{{ url_for('register_products.register_products') }}">Register Product</a></li>
+        <li><a href="{{ url_for('register_users.register_users') }}">Register Costumer</a></li>
     </ul>
 
-    <form action="{{ url_for('logout') }}" method="GET">
+    <form action="{{ url_for('logout.logout') }}" method="GET">
         <button type="submit">Logout</button>
     </form>
 </body>
