return costumer name by costumer id
getting data from costumer_id form and querying costumer name on database to return to page  {not complete}

--- a/view/register_sale.html
+++ b/view/register_sale.html
@@ -12,7 +12,7 @@
         <div id="form-header" class="container form-check-inline">
             <input hidden name="itemCounter" id="itemCounter" value="1">
             <label for="userRegistry">User Registry:</label>
-            <input type="text" name="userRegistry" id="userRegistry" class= "form-control" required><br><br>
+            <input type="text" name="userRegistry" id="userRegistry" class= "form-control" onchange= "sendUserRegistry()" required><br><br>
 
             <label for="userRegistry">Employee:</label>
             <input type="text" name="employee" id="employee" class= "form-control" required><br><br>
@@ -75,22 +75,21 @@
         }
 
         function sendUserRegistry() {
-
-            var user_registry_field = document.getElementById('userRegistry').value;
-
             var xhr = new XMLHttpRequest();
+            var user_registry_form = document.getElementById('userRegistry');
+            var user_registry_field = new FormData(user_registry_form);
+
             xhr.open('POST', '/sales/register/getCostumer', true);
             xhr.onreadystatechange = function() {
                 if (xhr.readyState === 4 && xhr.status === 200) {
                 // Handle the response from the server
                 var response = JSON.parse(xhr.responseText);
-                document.getElementById('result').innerHTML = response.message;
+                document.getElementById('employee').innerHTML = response.costumer_name;
+        }}    // Send the POST request with the userRegistryField as data
+            xhr.send('user_registry_field=' + encodeURIComponent(user_registry_field));
         }
-    };
+        
 
-    // Send the data to the server
-    xhr.send('data=' + inputData);
-        }
     </script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.9/dist/umd/popper.min.js" integrity="sha384-Xm2LfedunveZ9lM5f0M8iRQC7l6a5a62FdF4NDj2a9r56VQun/AK7M6FC0Az1Nz9" crossorigin="anonymous"></script>
