--- a/view/register_sale.html
+++ b/view/register_sale.html
@@ -12,10 +12,8 @@
         <div id="form-header" class="container form-check-inline">
             <input hidden name="itemCounter" id="itemCounter" value="1">
             <label for="userRegistry">User Registry:</label>
-            <input type="text" name="userRegistry" id="userRegistry" class= "form-control" onchange= "sendUserRegistry()" required><br><br>
-
-            <label for="userRegistry">Employee:</label>
-            <input type="text" name="employee" id="employee" class= "form-control" required><br><br>
+            <input type="text" name="userRegistry" id="userRegistry" class= "form-control" onchange= "sendUserRegistry()" required>
+            <p id="costumer"> Nome do Colaborador </p>
         </div>
 
         <div id="dynamicFields" class="form-inline">
@@ -42,6 +40,7 @@
     <script>
         
         let itemCounter = 2; // for addNewItemFiled function
+        let costumer_cpf = ""; // Costumer identification data that will be saved on sale registry
 
         function addNewItemField() { // Add Items
             const dynamicFields = document.getElementById("dynamicFields");
@@ -76,17 +75,19 @@
 
         function sendUserRegistry() {
             var xhr = new XMLHttpRequest();
-            var user_registry_form = document.getElementById('userRegistry');
-            var user_registry_field = new FormData(user_registry_form);
+            var user_registry_field = document.getElementById('userRegistry').value;
 
             xhr.open('POST', '/sales/register/getCostumer', true);
+            xhr.setRequestHeader('Content-Type', 'text/plain');
+
             xhr.onreadystatechange = function() {
                 if (xhr.readyState === 4 && xhr.status === 200) {
                 // Handle the response from the server
                 var response = JSON.parse(xhr.responseText);
-                document.getElementById('employee').innerHTML = response.costumer_name;
+                document.getElementById('costumer').innerHTML = response.costumer_name;
+                costumer_cpf = response.costumer_cpf;
         }}    // Send the POST request with the userRegistryField as data
-            xhr.send('user_registry_field=' + encodeURIComponent(user_registry_field));
+            xhr.send(user_registry_field);
         }
         
 
