--- a/view/register_sale.html
+++ b/view/register_sale.html
@@ -2,7 +2,9 @@
 <html>
 <head>
     <title>Register Sale</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" >
+    <script type="text/javascript" src="{{ url_for('static', filename='register_sale.js') }}"></script>
+
 </head>
 <body>
     <h1>Register Sale</h1>
@@ -13,11 +15,12 @@
             <input hidden name="itemCounter" id="itemCounter" value="1">
             <label for="userRegistry">User Registry:</label>
             <input type="text" name="userRegistry" id="userRegistry" class= "form-control" onchange= "getCostumer()" required>
-            <p id="costumer"> Costumer Name </p>
+            <p id="costumer"> Costumer Name </p></br>
+            <button type="button" class="btn btn-primary" onclick="addItem()">Add Item</button><br><br>
         </div>
 
-        <div id="dynamicFields" class="form-inline">
-            <div id="item" class="form-group d-inline-flex">
+        <div id="items" class="form-inline">
+            <div id="item1" class="form-group d-inline-flex row">
                 <label for="item"display: block>Item:</label>
                 <input type="text" name="item1" id="item1" class="form-control" required><br><br>
 
@@ -26,72 +29,18 @@
             
                 <label for="item"display: block>Price:</label>
                 <input type="number" name="price1" id="price1" class="form-control" required><br><br>
+                
+                <button type="button" class="btn btn-danger" onclick="removeItem(1)" > X </button>
             </div>
         <!-- Dynamic fields for additional items -->
-            <!-- JavaScript will add fields here -->
+            <!-- JavaScript will add fields here 
+        
+            -->
         </div>
         <div class="container form-inline padding">
-            <button type="button" class="btn btn-primary" onclick="addNewItemField()">Add Item</button><br><br>
-            <button type="button" class="btn btn-danger" onclick="removeLastItemField()">Remove Item</button><br><br>
             <input type="submit" value="Submit" class="btn btn-success" action="{{ url_for('register_sales.register_sales') }}">
         </div>
     </form>
-
-    <script>
-        
-        let itemCounter = 2; // for addNewItemFiled function
-        let costumer_cpf = ""; // Costumer identification data that will be saved on sale registry
-
-        function addNewItemField() { // Add Items
-            const dynamicFields = document.getElementById("dynamicFields");
-            const newItemField = document.createElement("div");
-            newItemField.innerHTML = `
-            <div id="item${itemCounter}" class="form-group">
-                <label for="item${itemCounter}">Item:</label>
-                <input type="text" name="item${itemCounter}" id="item${itemCounter}" class="form-control" required><br><br>
-
-                <label for="item">Quantity:</label>
-                <input type="number" name="quantity${itemCounter}" id="quantity${itemCounter}" class="form-control" required><br><br>
-                
-                <label for="item">Price:</label>
-                <input type="number" name="price${itemCounter}" id="price${itemCounter}" class="form-control" required><br><br>
-            </div>
-            `;
-            document.getElementById("itemCounter").value = itemCounter;
-            dynamicFields.appendChild(newItemField);
-            itemCounter++;
-        }
-
-        function removeLastItemField() {
-            const dynamicFields = document.getElementById("dynamicFields");
-            const lastItemField = dynamicFields.lastElementChild;
-
-            if (lastItemField) {
-                dynamicFields.removeChild(lastItemField);
-                document.getElementById("itemCounter").value = itemCounter-2;
-                itemCounter--;
-            }
-        }
-
-        function getCostumer() {
-            var xhr = new XMLHttpRequest();
-            var user_registry_field = document.getElementById('userRegistry').value;
-
-            xhr.open('POST', '/sales/register/getCostumer', true);
-            xhr.setRequestHeader('Content-Type', 'text/plain');
-
-            xhr.onreadystatechange = function() {
-                if (xhr.readyState === 4 && xhr.status === 200) {
-                // Handle the response from the server
-                var response = JSON.parse(xhr.responseText);
-                document.getElementById('costumer').innerHTML = response.costumer_name;
-                costumer_cpf = response.costumer_cpf;
-        }}    // Send the POST request with the userRegistryField as data
-            xhr.send(user_registry_field);
-        }
-        
-
-    </script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.9/dist/umd/popper.min.js" integrity="sha384-Xm2LfedunveZ9lM5f0M8iRQC7l6a5a62FdF4NDj2a9r56VQun/AK7M6FC0Az1Nz9" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
