costumer table + get_item endpoint
user and costumer tables refined in application
get_item endpoint completed

--- a/view/register_sale.html
+++ b/view/register_sale.html
@@ -21,10 +21,10 @@
 
         <div id="items" class="form-inline">
             <div id="item1" class="form-group d-inline-flex row">
-                <label for="item"display: block>EAN:</label>
-                <input type="text" name="item1" id="barcode1" class="form-control" onchange= "getItem(1)" required><br><br>
+                <label for="barcode1"display: block>EAN:</label>
+                <input type="text" name="barcode1" id="barcode1" class="form-control" onchange= "getItem('1')" required><br><br>
                 
-                <p id="ItemDescription">Item Description</p>
+                <p id="ItemDescription1">Item Description</p>
 
                 <label for="item" display: block>Quantity:</label>
                 <input type="number" name="quantity1" id="quantity1" class="form-control" required><br><br>
@@ -44,7 +44,6 @@
         </div>
     </form>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.9/dist/umd/popper.min.js" integrity="sha384-Xm2LfedunveZ9lM5f0M8iRQC7l6a5a62FdF4NDj2a9r56VQun/AK7M6FC0Az1Nz9" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
