--- a/view/register_sale.html
+++ b/view/register_sale.html
@@ -6,6 +6,29 @@
     <link rel="stylesheet" href="{{url_for('static', filename='style/register_sale.css')}}">
 </head>
 <body>
+    <nav class="navbar navbar-dark bg-dark">
+        <a class="navbar-brand" href="{{ url_for('home.homepage') }}">bigmais</a>
+        <ul class="nav">
+            <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('register_sales.register_sales') }}">Sell</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('view_sales.view_sales') }}">Sales Dashboard</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('register_products.register_products') }}">Register Product</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('register_users.register_users') }}">Register Customer</a>
+            </li>
+            <li class="nav-item">
+                <form action="{{ url_for('logout.logout') }}" method="GET">
+                    <button type="submit" class="btn btn-light btn-sm">Logout</button>
+                </form>
+            </li>
+        </ul>
+    </nav>
+
     <div id="saleFormContent" style="visibility: visible;">
     <h1 id="TitleHead">Register Sale</h1>
 
@@ -13,35 +36,35 @@
         <!-- Fixed fields: User Registry and Item -->
         <div id="form-header" class="container form-check-inline">
             <input hidden name="itemCounter" id="itemCounter" value="1">
-            <label for="costumerRegistry">User Registry:</label>
-            <input type="text" name="costumerRegistry" id="costumerRegistry" class= "form-control" onchange= "getCostumer()" required>
-            <p id="costumerName"> Costumer Name </p></br>
-            <button type="button" class="btn btn-primary" onclick="addItem()">Add Item</button><br><br>
+            <input type="text" name="costumerRegistry" id="costumerRegistry" palceholder="Costumer Registry" class="form-control" style="width: 10%" onchange="getCostumer()" required>
+            <input id="costumerName" placeholder="Costumer Name" class= "form-control" required disabled>
         </div>
 
         <div id="items" class="form-inline">
-            <div id="item1" class="form-group d-inline-flex row">
-                <label for="barcode1"display: block>EAN:</label>
-                <input type="text" name="barcode1" id="barcode1" class="form-control" onchange= "getItem('1')" required><br><br>
-                
-                <p id="itemDescription1"></p>
+            <div id="item1" class="form-row d-inline-flex row">
+                    <label for="barcode1"display: block>EAN:</label>
+                    <input type="text" name="barcode1" id="barcode1" class="form-control" onchange= "getItem('1')" required>
+                    
+                    <input id="itemDescription1" placeholder="Item Description" class= "form-control" required disabled>
 
-                <label for="quantity1" display: block>Quantity:</label>
-                <input type="number" name="quantity1" id="quantity1" class="form-control" required><br><br>
-            
-                <label for="price1"display: block>Price:</label>
-                <input type="number" name="price1" id="price1" class="form-control" required><br><br>
+                    <label for="quantity1" display: block>Quantity:</label>
+                    <input type="number" name="quantity1" id="quantity1" class="form-control" required disabled>
                 
-                <button type="button" class="btn btn-danger" onclick="removeItem(1)" > X </button>
+                    <label for="price1"display: block>Price:</label>
+                    <input type="number" name="price1" id="price1" class="form-control" required disabled>
+                    
+                    <button type="button" class="btn btn-danger" onclick="removeItem(1)" > X </button>
             </div>
         <!-- Dynamic fields for additional items -->
             <!-- JavaScript will add fields here 
         
             -->
         </div>
-        <div class="container form-inline padding">
-            <input type="button"  value="Submit" class="btn btn-success" onclick="validFields()">
-            <input type="button" value="Print" class="btn" id="printSale" onclick="printReceipt()" style='visibility: visible;'></button>
+        <div id="buttonsDiv" class="container form-inline padding receipt_container">
+            <button type="button" class="btn btn-primary" onclick="addItem()">Add Item</button>
+            <button type="button" id="submitBtn" class="btn btn-success" onclick="validFields()">Submit</button>
+            <button type="button" id="printBtn" class="btn" id="printSale" onclick="printReceipt()">Print</button>
+            <button type="reset" id="resetBtn" class="btn btn-warning">Reset</button>
         </div>
     </form>
     </div>
